
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cc.overwall.overwall.ui.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_emailtest"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/register_button"
                    app:cardCornerRadius="4dp"
                    app:cardBackgroundColor="#233333"
                    android:layout_margin="8dp"
                    android:layout_weight="1.0"
                    android:clickable="true"

                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">


                    <TextView
                        android:text="@string/action_register"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="26sp"
                        android:textColor="#EEEEEE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/email_sign_in_button"
                    app:cardCornerRadius="4dp"
                    app:cardBackgroundColor="@color/WaterGreen"
                    android:layout_margin="8dp"
                    android:layout_weight="1.0"
                    android:clickable="true"

                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">


                    <TextView
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="26sp"
                        android:textColor="#EEEEEE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </android.support.v7.widget.CardView>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>