<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#FF5722"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginLeft="18dp"
                android:gravity="center_vertical"
                android:text="@string/pay_1"
                android:textColor="#EEEEEE"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginLeft="18dp"
                android:gravity="center_vertical"
                android:text="@string/pay_2"
                android:textColor="#EEEEEE"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#2196f3"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginLeft="18dp"
                android:gravity="center_vertical"
                android:text="@string/pay_3"
                android:textColor="#EEEEEE"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:clickable="true"
            android:id="@+id/btn_makecode"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#4CAF50"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginLeft="18dp"
                android:gravity="center_vertical"
                android:text="生成"
                android:textColor="#EEEEEE"
                android:textSize="30sp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#EEEEEE"
            app:cardCornerRadius="3dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/pay_code"
                android:textIsSelectable="true"
                android:layout_marginLeft="18dp"
                android:gravity="center_vertical"
                android:text="loading..."
                android:textColor="#233333"
                android:textSize="18sp"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>